Tidy up dark mode WIP comments, fix disabled button appearance

--- a/frontend/src/components/retro-formats/mood/MoodRetro.css
+++ b/frontend/src/components/retro-formats/mood/MoodRetro.css
@@ -102,7 +102,7 @@
     padding: 0.8em 4px;
     font-weight: bolder;
     text-align: center;
-    color: #ffffff; /* WIP: dark mode */
+    color: #ffffff;
     outline: none;
     flex: 1;
 
@@ -116,7 +116,7 @@
   }
 
   .tab-item:not(.active) {
-    box-shadow: inset 0 -7px 5px -5px rgba(0, 0, 0, 0.1); /* WIP: dark mode */
+    box-shadow: inset 0 -7px 5px -5px rgba(0, 0, 0, 0.1);
   }
 
   .tab-item.active {
@@ -164,9 +164,8 @@
       white-space: nowrap;
 
       &:disabled {
-        /* WIP: dark mode */
-        background: #eeeeee;
-        color: #aaaaaa;
+        background: var(--beige-shadow);
+        color: var(--pale-text-on-white);
       }
     }
 
@@ -266,7 +265,7 @@
 
   & header .text-entry {
     border-radius: 4px;
-    box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.08); /* WIP: dark mode */
+    box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.08);
     transition:
       background 0.1s ease-out,
       box-shadow 0.1s ease-out;
@@ -278,7 +277,7 @@
     }
 
     & textarea::placeholder {
-      color: #ffffff; /* WIP: dark mode */
+      color: #ffffff;
       transition: color 0.1s ease-out;
     }
 
@@ -314,7 +313,7 @@
     &:focus-within,
     .page-retro-preview &.has-value {
       background: var(--primary-back);
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1); /* WIP: dark mode */
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 
       & textarea::placeholder {
         color: var(--pale-text-on-white);
@@ -322,7 +321,7 @@
 
       .attachments::before {
         background: var(--primary-back);
-        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1); /* WIP: dark mode */
+        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
       }
     }
   }
